--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -1,3 +1,6 @@
+$icomoon-font-path:"fonts/radio404/fonts";
+@import "../fonts/radio404/style";
+
 .wp-list-table .column-cover{
   width:60px;
   padding-right:0;
@@ -11,4 +14,27 @@
   width: 50px;
   height: 50px;
   vertical-align: text-top;
+}
+
+.dashicons{
+  &-radioking,&-radio,&-radio404{
+    &:before{
+      font-family: $icomoon-font-family;
+    }
+  }
+  &-radio{
+    &:before{
+      content:$i404-Radio;
+    }
+  }
+  &-radioking{
+    &:before{
+      content:$i404-radioking;
+    }
+  }
+  &-radio404{
+    &:before{
+      content:$i404-radio404;
+    }
+  }
 }
