--- a/fonts/Inter/inter.css
+++ b/fonts/Inter/inter.css
@@ -166,7 +166,7 @@ Usage:
   font-display: swap;
   font-style: normal;
   font-named-instance: 'Regular';
-  src: url("Inter-upright.var.woff2") format("woff2");
+  src: url("Inter-upright-var.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Inter var';
@@ -196,5 +196,5 @@ explicitly, e.g.
   font-weight: 100 900;
   font-display: swap;
   font-style: oblique 0deg 10deg;
-  src: url("Inter.var.woff2") format("woff2");
+  src: url("Inter-var.woff2") format("woff2");
 }
