--- a/admin.css
+++ b/admin.css
@@ -72,7 +72,12 @@
   font-family: "Inter var" !important; }
 
 .editor-styles-wrapper p em {
+  font-weight: 500;
   font-style: normal;
-  font-weight: 300; }
+  background: #ccc;
+  font-variant: small-caps;
+  text-transform: lowercase;
+  font-size: 1.1em;
+  line-height: 0.9em; }
 
 /*# sourceMappingURL=admin.css.map */
