--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -50,7 +50,7 @@ $inter: 'Inter var';
     em{
       font-weight: 500;
       font-style: normal;
-      background: #ccc;
+      background: #f0f0f0;
       font-variant: small-caps;
       text-transform: lowercase;
       font-size: 1.1em;
