--- a/admin.css
+++ b/admin.css
@@ -74,7 +74,7 @@
 .editor-styles-wrapper p em {
   font-weight: 500;
   font-style: normal;
-  background: #ccc;
+  background: #f0f0f0;
   font-variant: small-caps;
   text-transform: lowercase;
   font-size: 1.1em;
