migration from plugin to monolith theme

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: radio404
+Theme Name: radio404 (alpha)
 Theme URI: http://underscores.me/
 Author: Arthur Violy
 Author URI: https://radio404.fr
